--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,8 +1,10 @@
 /* write your override styles here */
 
-#wall > div{
+#wall > div {
   display: none;
 }
 
 
-#wall
+#wall .parent {
+  display: none;
+}
