--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,9 +1,9 @@
 /* write your override styles here */
 
-#wall > div {
-  display: none;
-}
+/*#wall > div {*/
+/*  display: none;*/
+/*}*/
 
-#wall  > div > div{
-  display: none;
-}
+/*#wall  > div > div{*/
+/*  display: none;*/
+/*}*/
