--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,9 +1,6 @@
 /* write your override styles here */
 
-#wall > div {
+#wall, .parent > div {
   display: none;
 }
 
-#wall .parent {
-  display: none;
-}
