Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,8 +1,8 @@
 /* write your override styles here */
 
-#wall > div {
-  display: none;
-}
+/*#wall > div {*/
+/*  display: none;*/
+/*}*/
 
 #tag-2 {
   display: none;
