--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -4,6 +4,6 @@
   display: none;
 }
 
-#wall.tag-1, #tag-2, #tag-3, #tag-4, #tag-5, #tag-6, #tag-7 {
+#wall, .tag-1, #tag-2, #tag-3, #tag-4, #tag-5, #tag-6, #tag-7 {
   display: none;
 }
