--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,8 +1,8 @@
 /* write your override styles here */
 
-#wall > div {
-  display: none;
-}
+/*#wall > div {*/
+/*  display: none;*/
+/*}*/
 
 .tag-1, #tag-2, #tag-3, #tag-4, #tag-5, #tag-6, #tag-7 {
   display: none;
