Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -12,6 +12,15 @@
   display: none;
 }
 
-#wall .parent #tag-4 {
+#wall > .parent {
   display: none;
 }
+
+
+/*#wall .parent #tag-4 {*/
+/*  display: none;*/
+/*}*/
+
+/*#wall .parent #tag-4 {*/
+/*  display: none;*/
+/*}*/
