Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,26 +1,21 @@
 /* write your override styles here */
 
-#wall .tag-1 {
-  display: none;
-}
-
-#wall #tag-2 {
-  display: none;
-}
-
-#wall .slick_wicked {
-  display: none;
-}
-
-#wall > .parent {
-  display: none;
-}
-
-
-/*#wall .parent #tag-4 {*/
+/*#wall .tag-1 {*/
 /*  display: none;*/
 /*}*/
 
-/*#wall .parent #tag-4 {*/
+/*#wall #tag-2 {*/
 /*  display: none;*/
 /*}*/
+
+/*#wall .slick_wicked {*/
+/*  display: none;*/
+/*}*/
+
+/*#wall > .parent {*/
+/*  display: none;*/
+/*}*/
+
+img[] {
+  
+}
