--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -12,14 +12,16 @@
 /*  display: none;*/
 /*}*/
 
-#wall > .parent {
-  display: none;
-}
+/*#wall > .parent {*/
+/*  display: none;*/
+/*}*/
 
-#wall .tag-1 {
-  display:none;
-}
+/*#wall .tag-1 {*/
+/*  display:none;*/
+/*}*/
 
-#wall #tag-2 {
+
+
+div~#wall {
   display:none;
 }
