--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,17 +1,17 @@
 /* write your override styles here */
 
-#wall .tag-1 {
-  display: none;
-}
+/*#wall .tag-1 {*/
+/*  display: none;*/
+/*}*/
 
-#wall #tag-2 {
-  display: none;
-}
+/*#wall #tag-2 {*/
+/*  display: none;*/
+/*}*/
 
 
-#wall > .parent {
-  display: none;
-}
+/*#wall > .parent {*/
+/*  display: none;*/
+/*}*/
 
 div[id*="tag"] {
   display:none;
