Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -9,13 +9,10 @@
 /*}*/
 
 
-/*#wall > .parent {*/
-/*  display: none;*/
-/*}*/
-
-body div #wall  {
-  display:none;
+#wall > .parent {
+  display: none;
 }
+
 
 
 
