--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,6 +1,6 @@
 /* write your override styles here */
 
-#wall .tag-1 {
+div#wall .tag-1 {
   display: none;
 }
 
@@ -11,7 +11,7 @@ div#wall div#tag-3{
   display: none;
 }
 
-#wall > .parent {
+div#wall > .parent {
   display: none;
 }
 
