--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -7,7 +7,7 @@ div#wall .tag-1 {
 div#wall div#tag-2 {
   display: none;
 }
-div#wall div#tag-3{
+div#wall div#tag-3[class~="slick"]{
   display: none;
 }
 
