--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,20 @@
 /* write your override styles here */
+
+div#wall .tag-1 {
+  display: none;
+}
+
+div#wall div#tag-2 {
+  display: none;
+}
+div#wall div#tag-3[class~="slick"]{
+  display: none;
+}
+
+div#wall > div.parent {
+  display: none;
+}
+
+
+
+
